--- a/index.css
+++ b/index.css
@@ -9,13 +9,41 @@ header {
     height: 50px;
 }
 
+/**
+ * ----------------------------------------
+ *                Perfil
+ * ----------------------------------------
+ */
+
+
 #profile-div-photo {
     background-color: #a075f7;
-    width: 240px;
+    min-width: 300px;
 }
 
 #profile-photo {
-    width: 240px;
+    width: 100%;
+    height: 380px;
+}
+
+.perfil {
+    width: 100%;
+    max-height: 380px;
+    display: flex;
+
+    box-shadow:
+        2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+        6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+        12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+        22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+        41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+        100px 100px 80px rgba(0, 0, 0, 0.07);
+
+}
+
+.info-perfil {
+    width: 70%;
+    margin: 0 15px 0 15px;
 }
 
 /**
@@ -23,12 +51,6 @@ header {
  *                Habilidades
  * ----------------------------------------
  */
-.skill {
-    /* border-radius: 10px;
-    background: #fdf7f7;
-    box-shadow: 6px 6px 11px #dbd4d4,
-        -6px -6px 11px #fffefe; */
-}
 
 .skill:hover {
     cursor: pointer;
@@ -234,4 +256,41 @@ header {
         -webkit-transform: scale(1) rotate3d(1, 1, 0, -360deg);
         transform: scale(1) rotate3d(1, 1, 0, -360deg);
     }
+}
+
+/**
+ * ----------------------------------------
+ *               Media Queries
+ * ----------------------------------------
+ */
+@media (max-width: 767px) {
+
+    .container,
+    .container-sm {
+        max-width: 325px;
+    }
+
+    .perfil {
+        display: inline;
+        box-shadow: none;
+    }
+
+    .skill-list {
+        display: flex;
+        margin-top: 7px;
+        width: 300px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .skill {
+        width: 35px;
+        margin-left: 2px;
+        margin-right: 2px;
+    }
+    
+    .info-perfil{
+        visibility: hidden;
+    }
+    
 }
