--- a/index.css
+++ b/index.css
@@ -42,12 +42,15 @@ header {
 }
 
 #profile-div-photo {
-  background-color: #a075f7;
-  min-width: 30rem;
+  /* background-color: #a075f7; */
+  /* min-width: 30rem; */
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
 }
 
 #profile-photo {
-  width: 100%;
+  /* width: 100%; */
   height: 40rem;
 }
 
